[gd_scene load_steps=4 format=2]

[ext_resource path="res://ReusableUI/ActionCard/ActionCard.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://iconsmall.png" type="Texture" id=3]

[node name="ActionCard" type="PanelContainer"]
margin_right = 500.0
margin_bottom = 300.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 500.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="TitleRow" type="HBoxContainer" parent="VBox"]
margin_right = 500.0
margin_bottom = 64.0

[node name="ActionIcon" type="TextureRect" parent="VBox/TitleRow"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )

[node name="ActionName" type="Label" parent="VBox/TitleRow"]
margin_left = 68.0
margin_top = 16.0
margin_right = 500.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "{ACTION_NAME}"
align = 1

[node name="HitDisplay" type="HBoxContainer" parent="VBox"]
margin_top = 68.0
margin_right = 500.0
margin_bottom = 100.0

[node name="ValidFrom_0" type="TextureRect" parent="VBox/HitDisplay"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="ValidFrom_1" type="TextureRect" parent="VBox/HitDisplay"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="ValidFrom_2" type="TextureRect" parent="VBox/HitDisplay"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="VBox/HitDisplay"]
margin_left = 108.0
margin_right = 392.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "{ CROSS }"
align = 1

[node name="ValidTarget_2" type="TextureRect" parent="VBox/HitDisplay"]
margin_left = 396.0
margin_right = 428.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="ValidTarget_1" type="TextureRect" parent="VBox/HitDisplay"]
margin_left = 432.0
margin_right = 464.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="ValidTarget_0" type="TextureRect" parent="VBox/HitDisplay"]
margin_left = 468.0
margin_right = 500.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="Detail" type="RichTextLabel" parent="VBox"]
margin_top = 104.0
margin_right = 500.0
margin_bottom = 300.0
size_flags_vertical = 3
bbcode_enabled = true
